samples/_failures_safe/1761420773_7e5213_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b07ea460.c: In function ‘main’:
./samples/SAFE/__tmp_b07ea460.c:165:5: error: expected declaration or statement at end of input
  165 |     return 0;
      |     ^~~~~~
